# mcp-servers-for-bedrock-samples

./: .gitmodules  README.md
deepseek-planner/: .env.example  .gitignore  README.md  pyproject.toml
deepseek-planner/src/: server.py
gamelift-mcp-server/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
gamelift-mcp-server/src/: gamelift_mcp_server.py
html_render_service/: .gitignore  README.md  pyproject.toml
html_render_service/src/: server.py
html_render_service/web/: docker-compose.yml  main.py  requirements.txt
nova-act-mcp-server/: README.md  claude-config-example.json  pyproject.toml
nova-act-mcp-server/src/: echo_server.py  server.py
remote_computer_use/: .env  .env.example  INSTALL.md  README.md  pyproject.toml  server.py  server_claude.py  server_v2.py  setup_vnc.sh  ssh_controller.py  test_connection.py  vnc_controller.py
remote_computer_use/docker/: Dockerfile  README.md  docker-compose.yml  start_vnc.sh  xstartup
remote_computer_use/tools/: base.py  bash.py  computer.py  edit.py  tools_config.py
streamble_mcp_server_demo/: .env  .gitignore  README.md  main.py  pyproject.toml  setup.sh
streamble_mcp_server_demo/src/: auth.py  cognito_auth.py  server.py
time_server/: README.md  hello.py
time_server/src/: server.py
