[project]
name = "remote-computer-use"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "paramiko>=3.5.1",
    "pillow>=11.1.0",
    "python-dotenv>=1.0.1",
    "shortuuid>=1.0.13",
    "vncdotool>=1.2.0",
]
